--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passion-manga</title>
+    <link rel="icon" type="image/vnd.icon" href="src/assets/img/favicon-manga.png">
   </head>
   <body>
     <div id="root"></div>
